fixed quiz box so that fields don't jump around

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,8 @@ body {
 	clear: left;
 }
 
+/* Quiz ========================================================= */
+
 .inactive{
 	display: none;
 }
@@ -39,24 +41,20 @@ body {
 #container {
 	margin-right: 12%;
 	margin-left: 12%;
-	color: #428BCA;
+	color: #1A7E66;
 }
 
 .box {
-	color: #428BCA;
-	width: 500px;
-	height: 500px;
+	color: #1A7E66;
+	width: 60%;
+	padding-bottom: 25%;
 	border: 1px solid #FFF;
 	background-color: #000;
-	box-shadow: 5px 5px 2px rgba(255,255,255, 0.75);
 	margin: auto;
 	margin-top: 2%;
-	margin-bottom: 2%;
-}
-
-
-#element-box { 
-	display:block; z-index:1; 
+	margin-bottom: 2%; 
+	display:block; 
+	z-index:1; 
 	position: relative;
 }
 
@@ -72,20 +70,6 @@ body {
 	display:none; z-index:2;
 }
 
-#nameField {
-	float: left;
-}
-
-#numField {
-	position: absolute:
-}
-
-#numField p {
-	text-align: left;
-	margin-left: 25px;
-	margin-top: 20px;
-}
-
 #symbol {
 	clear: both;
 	font-size: 10em;
@@ -95,11 +79,11 @@ body {
 
 #symbolInput {
 	clear: both;
-	position: absolute;
-	width: 20%;
+	font-size: 7em;
 	text-align: center;
-	margin-top: 35%;
-  margin-bottom: 20%;
+	margin-top: 25%;
+	width: 200px;
+	height: 200px;
 }
 
 .elName {
